# Deep-Full-Connected-NN

./: README.md  cifar10.py  classification.py  data_loader_cifar10.py  main.py  pyproject.toml
